force-app/main/default/objects/DocumentManagement__c/DocumentManagement__c.object-meta.xml
<CustomObject>
    <label>文書管理</label>
    <nameField>
        <label>書類名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>