force-app/main/default/objects/DocumentManagement__c/fields/AcceptDate__c.field-meta.xml
<CustomField>
    <fullName>AcceptDate__c</fullName>
    <label>受付日</label>
    <type>Date</type>
</CustomField>