force-app/main/default/objects/DocumentManagement__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>企業名</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>文書管理</relationshipLabel>
    <relationshipName>DocumentManagementAccountRelation</relationshipName>
    <type>Lookup</type>
</CustomField>