force-app/main/default/objects/DocumentManagement__c/fields/AllImprint__c.field-meta.xml
<CustomField>
    <fullName>AllImprint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>押印あるもの全部</label>
    <type>Checkbox</type>
</CustomField>