force-app/main/default/objects/DocumentManagement__c/fields/BarcodeNum__c.field-meta.xml
<CustomField>
    <fullName>BarcodeNum__c</fullName>
    <label>バーコード番号</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>