force-app/main/default/objects/DocumentManagement__c/fields/ContactReturn__c.field-meta.xml
<CustomField>
    <fullName>ContactReturn__c</fullName>
    <label>契約書返却</label>
    <length>255</length>
    <type>Text</type>
</CustomField>