force-app/main/default/objects/DocumentManagement__c/fields/ContactReturnDate__c.field-meta.xml
<CustomField>
    <fullName>ContactReturnDate__c</fullName>
    <label>契約書返却日</label>
    <type>Date</type>
</CustomField>