force-app/main/default/objects/DocumentManagement__c/fields/ContactReturnRule__c.field-meta.xml
<CustomField>
    <fullName>ContactReturnRule__c</fullName>
    <label>契約書返却ルール</label>
    <length>255</length>
    <type>Text</type>
</CustomField>