force-app/main/default/objects/DocumentManagement__c/fields/ExtractionDate__c.field-meta.xml
<CustomField>
    <fullName>ExtractionDate__c</fullName>
    <label>抜出日</label>
    <type>Date</type>
</CustomField>