force-app/main/default/objects/DocumentManagement__c/fields/IsContactNone__c.field-meta.xml
<CustomField>
    <fullName>IsContactNone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>契約書無しフラグ</label>
    <type>Checkbox</type>
</CustomField>