force-app/main/default/objects/DocumentManagement__c/fields/LastRentPayDate__c.field-meta.xml
<CustomField>
    <fullName>LastRentPayDate__c</fullName>
    <formula>CancelCalculate__r.LastRentPayDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>最終家賃負担日</label>
    <type>Date</type>
</CustomField>