force-app/main/default/objects/DocumentManagement__c/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <label>依頼者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>