force-app/main/default/objects/DocumentManagement__c/fields/ReturnArrangementDate__c.field-meta.xml
<CustomField>
    <fullName>ReturnArrangementDate__c</fullName>
    <label>返却整理日</label>
    <type>Date</type>
</CustomField>