force-app/main/default/objects/DocumentManagement__c/fields/ReturnDate__c.field-meta.xml
<CustomField>
    <fullName>ReturnDate__c</fullName>
    <label>返却日</label>
    <type>Date</type>
</CustomField>