force-app/main/default/objects/DocumentManagement__c/fields/ReturnReceiptDate__c.field-meta.xml
<CustomField>
    <fullName>ReturnReceiptDate__c</fullName>
    <label>返却受取日</label>
    <type>Date</type>
</CustomField>