force-app/main/default/objects/DocumentManagement__c/fields/ReturnScheduleDate__c.field-meta.xml
<CustomField>
    <fullName>ReturnScheduleDate__c</fullName>
    <label>返却予定日</label>
    <type>Date</type>
</CustomField>