force-app/main/default/objects/DocumentManagement__c/fields/SendMethod__c.field-meta.xml
<CustomField>
    <fullName>SendMethod__c</fullName>
    <label>送付方法</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>送付</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>