force-app/main/default/objects/DocumentManagement__c/fields/StorageDocument__c.field-meta.xml
<CustomField>
    <fullName>StorageDocument__c</fullName>
    <label>書類保管</label>
    <length>255</length>
    <type>Text</type>
</CustomField>