force-app/main/default/objects/DocumentManagement__c/fields/StoragePeriod__c.field-meta.xml
<CustomField>
    <fullName>StoragePeriod__c</fullName>
    <label>保管期限</label>
    <type>Date</type>
</CustomField>