force-app/main/default/objects/DocumentManagement__c/fields/StorageUnit__c.field-meta.xml
<CustomField>
    <fullName>StorageUnit__c</fullName>
    <label>保管単位</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>