force-app/main/default/objects/DocumentManagement__c/fields/StorageYear__c.field-meta.xml
<CustomField>
    <fullName>StorageYear__c</fullName>
    <label>保管年数</label>
    <length>255</length>
    <type>Text</type>
</CustomField>