force-app/main/default/objects/DocumentManagement__c/fields/TakingOutReason__c.field-meta.xml
<CustomField>
    <fullName>TakingOutReason__c</fullName>
    <label>持出理由</label>
    <type>TextArea</type>
</CustomField>