force-app/main/default/objects/DocumentManagement__c/recordTypes/ContactReturnStorage.recordType-meta.xml
<RecordType>
    <fullName>ContactReturnStorage</fullName>
    <active>true</active>
    <label>契約書返却/保管</label>
</RecordType>