force-app/main/default/objects/DocumentManagement__c/recordTypes/PDFRequest.recordType-meta.xml
<RecordType>
    <fullName>PDFRequest</fullName>
    <active>true</active>
    <label>PDF依頼</label>
</RecordType>