force-app/main/default/objects/DocumentManagement__c/recordTypes/TempGoodsIssue.recordType-meta.xml
<RecordType>
    <fullName>TempGoodsIssue</fullName>
    <active>true</active>
    <label>一時出庫</label>
</RecordType>